fix image stretching

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -7,7 +7,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 200000;
+  z-index: 20;
   .logo {
     height: 45px;
     width: fit-content;
