--- a/src/components/admin-header/admin-header.module.scss
+++ b/src/components/admin-header/admin-header.module.scss
@@ -7,7 +7,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 200000;
+  z-index: 200;
   box-shadow: 4px 4px 64px rgba(0, 0, 0, 0.04);
   p {
     color: var(--darkClr);
